# leaf-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: build.yml  lint.yml  test.yml
apps/users/: _email_manager.py  admin.py  urls.py
apps/users/api/: serializer.py  serializers.py  views.py
apps/users/api/tests/: test_serializer.py  test_serializers.py  test_views.py
apps/users/api/views/: __init__.py  create_user.py  list_users.py  search_users.py  serializers.py
apps/users/api/views/tests/: conftest.py  test_create_view.py  test_list_view.py  test_login_view.py  test_search_view.py  test_serializers.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  _email_manager.py  email_user.py
apps/users/models/tests/: test_models.py
apps/users/tests/: test__email_manager.py  test_models.py
config/: settings.py  urls.py
docs/: initiative-plan.md
